--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 API_KEY=eyJhbGciOiJIUzI1NiJ9.eyJlbWFpbCI6IjIzZjMwMDE0ODZAZHMuc3R1ZHkuaWl0bS5hYy5pbiJ9.LbGB5tn8LBkdTukZW26psOcZ6rjbncoTB87Fa8mvQ6A
+DATABASE_URL=postgres://postgres.innhrqeevlmybndzcikg:H4HWJkEYZC2xjxy8@aws-0-us-east-1.pooler.supabase.com:6543/postgres?sslmode=require&supa=base-pooler.x
